src/test/deca/codegen/valid/avecObjet/public_field_access_other_object.deca
// Description :
//    Accès et affichage d'un champ public via un autre objet.
//
// Resultats :
//    Affiche : 2

class A {
    int x;
}

{
    A a = new A();
    a.x = 2;
    println(a.x);
}

