src/test/deca/codegen/invalid/avecObjet/null_ref.deca
// Description :
//    Accès à un champ d'un objet null.
//
// Resultats :
//    Erreur : dereferencement de null

class A {
    int x;
}

{
    A a = null;
    println(a.x);
}